fixed gap below footer
update styles.css to have the footer fit content

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -120,9 +120,10 @@ body {
 footer {
     margin-top: 30rem;
     position: relative;
+    bottom: 0;
     padding: 0;
     text-align: center;
-    height: 2.8rem;
+    height: fit-content;
     background-color: #0B4857;
 }
 
